fixed dark mode difficulties

--- a/src/components/layout/style.scss
+++ b/src/components/layout/style.scss
@@ -21,8 +21,6 @@
       }
     }
   }
-  .header-navbar {
-  }
 }
 
 .mode-toggle {
