--- a/src/components/utils/style.scss
+++ b/src/components/utils/style.scss
@@ -1,6 +1,7 @@
 @import "../../display/style/style.scss";
 
 .button {
+  background-color: rgba($color: #000000, $alpha: 0);
   border-width: 2px;
   cursor: pointer;
   font-size: 21px;
@@ -137,12 +138,13 @@
   height: 210px;
 }
 
+// LINK
 .link {
   font-size: 21px;
 }
 .link1 {
   flex: 1;
-  margin-right: 40px;
+  margin-right: 38px;
 }
 
 .route {
